--- a/app/ui_elements/decorators/polybox_medres.haml
+++ b/app/ui_elements/decorators/polybox_medres.haml
@@ -2,8 +2,7 @@
   # NOTE: only 1 is allowed per view/page!
   # If that need ever to be changed, pagination needs to be addressed.
 
-  # TODO: i18n
-  default_fallback = "(No content.)"
+  default_fallback = t(:no_content_fallback)
   elm_anchor = 'resources-page'
 
   # This is a presenter-spezific decorator for MediaResources!
