--- a/app/views/my/_section_groups.html.haml
+++ b/app/views/my/_section_groups.html.haml
@@ -1,8 +1,8 @@
 - # Only shown on the dashboard "index"! This is NOT the 'Groups' index!!!
 :ruby
   group_types = { # config:
-    internal: "Arbeitsgruppen",
-    external: "Abteilungsgruppen"
+    internal: t(:internal_groups),
+    external: t(:external_groups)
   }.map do |type, label|
     groups = get.groups.send(type).map {|get| { text: get.name, href: get.url } }
     [type, { label: label, list: groups }]
