--- a/app/views/my/groups/edit.html.haml
+++ b/app/views/my/groups/edit.html.haml
@@ -13,9 +13,9 @@
 
     %hr.separator.mini.mvs
 
-    = label_tag member_field_name, 'New member login', class: 'title-s'
+    = label_tag member_field_name, t(:group_edit_form_new_member_login), class: 'title-s'
     = text_field_tag member_field_name
 
     %hr.separator.mini.mvs
 
-    = g_form.submit 'Update group'
+    = g_form.submit
