--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -24,7 +24,7 @@
   #ui-resources-list-container.ui-container.midtone.rounded-bottom
     .ui-container.inverted.ui-toolbar.pvx
       .ui-toolbar-header.pls
-        MediaResources related via MetaData:
+        = t(:people_toolbar_header)
     .ui-resources-holder.pam
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
