--- a/app/views/media_entries/_show/_resource_header.haml
+++ b/app/views/media_entries/_show/_resource_header.haml
@@ -7,7 +7,7 @@
     link: media_entry_path,
     icon: :trash,
     method: :delete,
-    data: { confirm: 'Are you sure you want to delete this?' })
+    data: { confirm: t(:btn_delete_confirm_msq) })
 
   ]
 
