--- a/app/views/media_entries/_show/_unpublished_header.haml
+++ b/app/views/media_entries/_show/_unpublished_header.haml
@@ -1,5 +1,5 @@
 - content_for(:app_alerts) do
-  = component('alert', level: 'warning', text: 'Entry is not published yet!')
+  = component('alert', level: 'warning', text: t(:media_entry_not_published_warning_msg))
 
 .ui-container.bright.bordered-bottom.mbm
 
@@ -18,11 +18,11 @@
       = component('button.tertiary',
         link: media_entry_path,
         method: :delete,
-        data: { confirm: 'Are you sure you want to delete this?' },
-        text: 'Delete!')
+        data: { confirm: t(:btn_delete_confirm_msq) },
+        text: t(:btn_delete_text))
 
       = component('button.primary',
         link: publish_media_entry_path,
         method: :post,
-        data: { confirm: 'Are you sure you want to publish this?' },
-        text: 'Publish!')
+        data: { confirm: t(:btn_publish_confirm_msg) },
+        text: t(:btn_publish_text))
