--- a/app/views/meta_data/show.html.haml
+++ b/app/views/meta_data/show.html.haml
@@ -1,21 +1,21 @@
 :ruby
   content_for(:header) do
-    component('page-header', icon: '▲', text: 'MetaDatum')
+    component('page-header', icon: '▲', text: t(:meta_data_header_text))
   end
 
   actions = component('actions', mods: 'phl pbl mtl', actions: [
       if @get.policy(current_user).edit?
         component('button.primary', mods: 'large',
-                  text: 'Edit', icon: 'pen',
+                  text: t(:meta_data_action_edit_btn), icon: 'pen',
                   link: edit_meta_datum_path(@get.uuid))
       end,
       if @get.policy(current_user).destroy?
         component('button.tertiary', mods: 'large',
-                    text: 'Delete', icon: 'trash',
+                    text: t(:meta_data_action_delete_btn), icon: 'trash',
                     link: meta_datum_path(@get.uuid),
                     method: :delete,
                     data: {
-                      confirm: 'Are you sure you want to delete this MetaDatum?'
+                      confirm: t(:meta_data_delete_confirm_msg)
                     })
       end
     ])
