ui: js-uploader w/ drag'n'drop, previews
- controller: fixes for 'published' scope and responders
- js: use bulk-require/bulkify (require folder as object)
- react/ui-compoents: Thumbnail, Picture, Icon
- react/decorators: ResourceThumbnail, MediaResourcesBox
- controller: optional param, respond w/ presenter
- ui: helper: react: props are optional
- ui: fix form-group label
- dev: lint: also lint top-level coffee
- tmp: use forked ampersand-react-mixin
- tmp: install active-lodash from tarball (npm bug?)

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -214,3 +214,12 @@ form.button_to
       @extend .link
       [class^="icon-"], [class^="fa-"]
         display: initial
+
+// fix alt text on images
+img, img.ui-thumbnail-image
+  line-height: initial
+
+#ui-uploader
+  #ui-resources-preview
+    height: 300px
+    overflow: auto
