--- a/app/ui_elements/decorators/meta_data_by_vocabulary.haml
+++ b/app/ui_elements/decorators/meta_data_by_vocabulary.haml
@@ -1,10 +1,3 @@
-:ruby
-  meta_data ||= nil
-  show_fallback ||= nil
-  # unless meta_data.is_a?(Presenters::MetaData::MetaDataShow)
-  #   fail 'ui: not a MetaDataPresenter!'
-  # end
-
 .meta-data-summary.mbl
   -# build the vocabulary boxes with meta_data lists, 4 per row
   - colums = meta_data.keys.in_groups_of(4)
@@ -13,6 +6,6 @@
       - row.each do |vocab_id|
         - if (vocab_id && data = meta_data[vocab_id])
           .col1of4
-            = deco('vocabulary_meta_data_list', mods: 'prm', data: data, show_fallback: show_fallback)
+            = deco('vocabulary_meta_data_list', mods: 'prm', data: data)
     - unless colums.last == row
       %hr.separator.mini.mbl
