Add API Link to header

--- a/app/views/application/_app_header.haml
+++ b/app/views/application/_app_header.haml
@@ -43,6 +43,13 @@
           href: admin_root_path
         },
 
+        api: {
+          text: "API",
+          icon: 'icon-api',
+          href: "/api/browser/index.html#/api"
+        },
+
+
         help: { icon: 'icon-nav-help', href: settings.support_url }
       }
     ),
