--- a/app/views/admin/vocabularies/_form.html.haml
+++ b/app/views/admin/vocabularies/_form.html.haml
@@ -16,6 +16,18 @@
       = f.text_area :description, class: 'form-control', rows: 4
   .form-group
     .col-xs-offset-1.col-xs-3
+      .checkbox
+        %label
+          = f.check_box :enabled_for_public_view
+          Enabled for public view?
+  .form-group
+    .col-xs-offset-1.col-xs-3
+      .checkbox
+        %label
+          = f.check_box :enabled_for_public_use
+          Enabled for public use?
+  .form-group
+    .col-xs-offset-1.col-xs-3
       = button_tag type: 'submit', class: 'btn btn-success' do
         %span.glyphicon.glyphicon-ok
         Save
