Presenter: cleanup MediaResource(s)
Presenter:
-   unified "MediaResources", meaning an ordered, paginated, filterable list of either `MediaEntry`, `Collection`, `FilterSet` or `MediaResource`.
    The latter one is only used for this kind of polymorph list is needed (right now only `Collection#child_media_resources`).
-   split up all remaining "MediaResources" as Hash with 3 Keys" into seperate collections/presenter methods.
    only impacted on user/dashboard.
-   typecheck class on init
- remove .total_count for performance

Controller:
params handling for all controllers that use `MediaResources` either directly or indirectly.

TODO:
- "MediaResources" ->  "MediaResourcesList" ?
- "MultiMediaResources": presenter for up to 3 'MediaResources(List)s', with toggle-switch but without the 'all' option

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -58,7 +58,7 @@
     .ui-resources-holder.pam
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
-          = deco('polybox_medres', mods: ['active'],
-                  media_resources: @get.relations.child_media_resources)
+          = deco('polybox', interactive: true,
+              media_resources: @get.relations.child_media_resources)
 
 = deco('resource_show', collection_show)
